@@ -1,0 +1,105 @@
+<!-- OVal DTD
+
+<!DOCTYPE oval PUBLIC 
+   "-//OVal/OVal Configuration DTD 0.8//EN"
+   "http://oval.sourceforge.net/oval-configuration-0.8.dtd">
+
+  http://en.wikipedia.org/wiki/Document_Type_Definition
+-->
+
+<!-- the root element -->
+<!ELEMENT oval ( (constraintSet*|class*)* ) >
+
+<!-- constraint set configuration elements -->
+<!ELEMENT constraintSet ANY >
+<!ATTLIST constraintSet id NMTOKEN #REQUIRED >
+<!ATTLIST constraintSet overwrite NMTOKEN #IMPLIED >
+
+<!-- class configuration elements -->
+<!ELEMENT class ( (field*|constructor*|method*)* ) >
+<!ATTLIST class applyFieldConstraintsToSetter NMTOKEN #IMPLIED >
+<!ATTLIST class overwrite NMTOKEN #IMPLIED >
+<!ATTLIST class type CDATA #REQUIRED >
+
+<!-- validation context elements -->
+<!ELEMENT field ANY >
+<!ATTLIST field defineConstraintSet NMTOKEN #IMPLIED >
+<!ATTLIST field name NMTOKEN #REQUIRED >
+<!ATTLIST field overwrite NMTOKEN #IMPLIED >
+
+<!ELEMENT constructor ( parameter+ ) >
+<!ATTLIST constructor overwrite NMTOKEN #IMPLIED >
+
+<!ELEMENT method (parameter*,returnValue?) >
+<!ATTLIST method name NMTOKEN #REQUIRED >
+<!ATTLIST method overwrite NMTOKEN #IMPLIED >
+
+<!ELEMENT parameter ANY >
+<!ATTLIST parameter overwrite NMTOKEN #IMPLIED >
+<!ATTLIST parameter type NMTOKEN #REQUIRED >
+
+<!ELEMENT returnValue ANY >
+<!ATTLIST returnValue overwrite NMTOKEN #IMPLIED >
+
+<!-- built-in constraints -->
+<!ELEMENT net.sf.oval.constraints.AssertConstraintSetCheck EMPTY >
+<!ATTLIST net.sf.oval.constraints.AssertConstraintSetCheck id NMTOKEN #REQUIRED >
+<!ATTLIST net.sf.oval.constraints.AssertConstraintSetCheck message CDATA #IMPLIED >
+<!ATTLIST net.sf.oval.constraints.AssertConstraintSetCheck source NMTOKEN #IMPLIED >
+
+<!ELEMENT net.sf.oval.constraints.AssertFalseCheck EMPTY >
+<!ATTLIST net.sf.oval.constraints.AssertFalseCheck message CDATA #IMPLIED >
+
+<!ELEMENT net.sf.oval.constraints.AssertFieldConstraintsCheck EMPTY >
+<!ATTLIST net.sf.oval.constraints.AssertFieldConstraintsCheck fieldName NMTOKEN #REQUIRED >
+<!ATTLIST net.sf.oval.constraints.AssertFieldConstraintsCheck message CDATA #IMPLIED >
+
+<!ELEMENT net.sf.oval.constraints.AssertTrueCheck EMPTY >
+<!ATTLIST net.sf.oval.constraints.AssertTrueCheck message CDATA #IMPLIED >
+
+<!ELEMENT net.sf.oval.constraints.AssertValidCheck EMPTY >
+<!ATTLIST net.sf.oval.constraints.AssertValidCheck message CDATA #IMPLIED >
+
+<!ELEMENT net.sf.oval.constraints.InstanceOfCheck EMPTY >
+<!ATTLIST net.sf.oval.constraints.InstanceOfCheck clazz NMTOKEN #REQUIRED >
+<!ATTLIST net.sf.oval.constraints.InstanceOfCheck message CDATA #IMPLIED >
+
+<!ELEMENT net.sf.oval.constraints.LengthCheck EMPTY >
+<!ATTLIST net.sf.oval.constraints.LengthCheck max NMTOKEN #IMPLIED >
+<!ATTLIST net.sf.oval.constraints.LengthCheck message CDATA #IMPLIED >
+<!ATTLIST net.sf.oval.constraints.LengthCheck min NMTOKEN #IMPLIED >
+
+<!ELEMENT net.sf.oval.constraints.NotEmptyCheck EMPTY >
+<!ATTLIST net.sf.oval.constraints.NotEmptyCheck message CDATA #IMPLIED >
+
+<!ELEMENT net.sf.oval.constraints.NotNegativeCheck EMPTY >
+<!ATTLIST net.sf.oval.constraints.NotNegativeCheck message CDATA #IMPLIED >
+
+<!ELEMENT net.sf.oval.constraints.NotNullCheck EMPTY >
+<!ATTLIST net.sf.oval.constraints.NotNullCheck message CDATA #IMPLIED >
+
+<!ELEMENT net.sf.oval.constraints.NotSelfRefCheck EMPTY >
+<!ATTLIST net.sf.oval.constraints.NotSelfRefCheck message CDATA #IMPLIED >
+
+<!ELEMENT net.sf.oval.constraints.RangeCheck EMPTY >
+<!ATTLIST net.sf.oval.constraints.RangeCheck max NMTOKEN #IMPLIED >
+<!ATTLIST net.sf.oval.constraints.RangeCheck message CDATA #IMPLIED >
+<!ATTLIST net.sf.oval.constraints.RangeCheck min NMTOKEN #IMPLIED >
+
+<!ELEMENT net.sf.oval.constraints.RegExCheck ( pattern ) >
+<!ATTLIST net.sf.oval.constraints.RegExCheck message CDATA #IMPLIED >
+
+<!ELEMENT pattern EMPTY >
+<!ATTLIST pattern flags NMTOKEN #IMPLIED >
+<!ATTLIST pattern pattern CDATA #REQUIRED >
+
+<!ELEMENT net.sf.oval.constraints.SizeCheck EMPTY >
+<!ATTLIST net.sf.oval.constraints.SizeCheck max NMTOKEN #IMPLIED >
+<!ATTLIST net.sf.oval.constraints.SizeCheck message CDATA #IMPLIED >
+<!ATTLIST net.sf.oval.constraints.SizeCheck min NMTOKEN #IMPLIED >
+
+<!ELEMENT net.sf.oval.constraints.ValidateWithMethodCheck EMPTY >
+<!ATTLIST net.sf.oval.constraints.ValidateWithMethodCheck ignoreIfNull NMTOKEN #IMPLIED >
+<!ATTLIST net.sf.oval.constraints.ValidateWithMethodCheck message CDATA #IMPLIED >
+<!ATTLIST net.sf.oval.constraints.ValidateWithMethodCheck methodName NMTOKEN #REQUIRED >
+<!ATTLIST net.sf.oval.constraints.ValidateWithMethodCheck parameterType NMTOKEN #REQUIRED >
